Fix text positioning of first scene and drop some scrollbars

--- a/scene-ax-vs-bamboo/main.css
+++ b/scene-ax-vs-bamboo/main.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 @keyframes axIntro {
     from { bottom: -200px; }
     to   { bottom: 70px; }
